; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_files.c_msi_resolve_file_source.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_files.c_msi_resolve_file_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32, i32, %struct.TYPE_4__*, i64 }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"Working to resolve source of file %s\0A\00", align 1
@INVALID_FILE_ATTRIBUTES = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [31 x i8] c"file %s source resolves to %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @msi_resolve_file_source(i32* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @debugstr_w(i32* %10)
  %12 = call i32 (i8*, i32, ...) @TRACE(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 4
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %59

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 3
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32* @msi_resolve_source_folder(i32* %19, i32 %24, i32* null)
  store i32* %25, i32** %6, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32* @msi_build_directory_name(i32 2, i32* %26, i32 %29)
  store i32* %30, i32** %7, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %48

35:                                               ; preds = %18
  %36 = load i32*, i32** %7, align 8
  %37 = call i64 @GetFileAttributesW(i32* %36)
  %38 = load i64, i64* @INVALID_FILE_ATTRIBUTES, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %48

40:                                               ; preds = %35
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @msi_free(i32* %41)
  %43 = load i32*, i32** %6, align 8
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 8
  %47 = call i32* @msi_build_directory_name(i32 2, i32* %43, i32 %46)
  store i32* %47, i32** %7, align 8
  br label %48

48:                                               ; preds = %40, %35, %18
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @msi_free(i32* %49)
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %52 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %51, i32 0, i32 0
  %53 = load i32*, i32** %52, align 8
  %54 = call i32 @debugstr_w(i32* %53)
  %55 = load i32*, i32** %7, align 8
  %56 = call i32 @debugstr_w(i32* %55)
  %57 = call i32 (i8*, i32, ...) @TRACE(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %54, i32 %56)
  %58 = load i32*, i32** %7, align 8
  store i32* %58, i32** %3, align 8
  br label %59

59:                                               ; preds = %48, %17
  %60 = load i32*, i32** %3, align 8
  ret i32* %60
}

declare dso_local i32 @TRACE(i8*, i32, ...) #1

declare dso_local i32 @debugstr_w(i32*) #1

declare dso_local i32* @msi_resolve_source_folder(i32*, i32, i32*) #1

declare dso_local i32* @msi_build_directory_name(i32, i32*, i32) #1

declare dso_local i64 @GetFileAttributesW(i32*) #1

declare dso_local i32 @msi_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
